CheckStyle: new Long(foo) become Long.valueOf(foo)